--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^0.22.0
   flutter_masonry_view: ^0.0.2
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
