--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   flutter_svg: ^0.22.0
   flutter_masonry_view: ^0.0.2
   intl: ^0.17.0
+  http: ^0.13.5
+  socket_io_client: ^2.0.0
 
 dev_dependencies:
   flutter_test:
