--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   intl: ^0.17.0
   http: ^0.13.5
   socket_io_client: ^2.0.0
+  localstorage: ^4.0.0+1
 
 dev_dependencies:
   flutter_test:
