--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,11 @@ dev_dependencies:
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter.
+flutter_icons:
+  android: true
+  ios: true
+  adaptive_icon_background: "#000000"
+
 flutter:
 
   # The following line ensures that the Material Icons font is
